fixed line wrapping for date in announcement

--- a/G09projectenII/wwwroot/css/calendar.css
+++ b/G09projectenII/wwwroot/css/calendar.css
@@ -165,10 +165,15 @@
     border-radius: 0px 30px 30px 30px;
     background: var(--nearly-white);
     padding: 1.2rem;
-    display: flex;
+    display: block;
 }
 
-.modal-announcement .organiser {
+.modal-announcement .body-top {
+        display: flex;
+    justify-content: space-between;
+}
+
+.modal-announcement .organiser .name {
     color: black;
     margin-bottom: -0.3rem;
 }
